2010-06-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/SDCCpeeph.h,
	  src/port.h,
	  src/mcs51/peeph.def,
	  src/ds390/peeph.def,
	  src/avr/peeph.def,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-gbz80.def:
	  Peephole cleanup.

2010-06-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lksym.c,
	* src/ds390/main.c,
	* src/SDCCast.c: cosmetic changes
	* src/SDCC.y: removed type_specifier2, moved AT into type_specifier,
	    fixed bug 29979999
	* src/SDCCsymt.c (addDecl): fixed char* __code __at(N) bug
	* support/regression/tests/absolute.c: added test for bug 29979999

2010-06-12 Borut Razem <borut.razem AT siol.net>

	* device/include/asm/pic/features.h, device/include/pic/*.h,
	  device/include/pic/p16f_common.inc:
	  sdcc library license changed to GPL+LE

2010-06-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/peep.c:
	  Improved canAssign().

2010-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCpeeph.c,
	  src/mcs51/main.c,
	  src/pic/main.c,
	  src/z80/peep.h,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  src/pic16/main.c,
	  src/hc08/main.c,
	  src/ds390/main.c:
	  Added canAssign() for use in peepholes.

2010-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peeph-gbz80.def:
	  Move generation of short jumps into peepholes.

2010-06-05 Borut Razem <borut.razem AT siol.net>

	* device/include/asm/pic16/features.h, device/include/pic16/*.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/p18fxxx.inc, device/lib/pic16/libsdcc/*.c:
	  sdcc library license changed to GPL+LE

2010-06-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asranlib/asranlib.c (do_ranlib): fixed text output
	* src/SDCCerr.c,
	* src/SDCCerr.h,
	* src/SDCC.y: changed E_STORAGE_CLASS_SPECIFIED_FOR_PARAMETER to
	    E_STORAGE_CLASS_FOR_PARAMETER
	* src/SDCCcse.c,
	* src/SDCCdflow.c,